--- a/src/pages/database.astro
+++ b/src/pages/database.astro
@@ -29,7 +29,7 @@ try {
 }
 ---
 
-<MainTerminal title="數據觀測 (SQLite)" fullWidth>
+<MainTerminal title="數據觀測" fullWidth>
     <div class="fixed inset-x-0 bottom-0 top-[64px] flex overflow-hidden">
         <!-- Explorer Orchestration -->
         <DatabaseSidebar tables={tables} tableStats={tableStats} />
