--- a/src/pages/institutional.astro
+++ b/src/pages/institutional.astro
@@ -13,7 +13,7 @@ import ForensicReport from '../components/organisms/ForensicReport.svelte';
 import ForensicTicker from '../components/molecules/ForensicTicker.svelte';
 ---
 
-<MainTerminal title="Institutional_Intelligence" fullWidth>
+<MainTerminal title="法人監控" fullWidth>
     <div class="px-4 lg:px-6 py-4 flex flex-col h-full bg-base gap-6">
         <!-- Dashboard Header -->
         <InstitutionalHeader />
