--- a/src/pages/stocks/index.astro
+++ b/src/pages/stocks/index.astro
@@ -5,7 +5,7 @@ import ForensicTicker from '../../components/molecules/ForensicTicker.astro';
 import AnalysisHubManager from '../../components/organisms/AnalysisHubManager.svelte';
 ---
 
-<MainTerminal title="Intelligence_Center (CORE_NEXUS)">
+<MainTerminal title="分析中心">
     <div
         class="h-full flex flex-col p-4 lg:p-10 lg:pt-16 max-w-[1400px] mx-auto w-full overflow-hidden"
     >
