--- a/src/pages/watchlist.astro
+++ b/src/pages/watchlist.astro
@@ -5,7 +5,7 @@ import ForensicTicker from '../components/molecules/ForensicTicker.astro';
 import WatchlistManager from '../components/organisms/WatchlistManager.svelte';
 ---
 
-<MainTerminal title="自選監控中心 | Analysis Registry">
+<MainTerminal title="自選監控中心">
     <div class="h-full flex flex-col p-4 lg:p-10 gap-10 overflow-hidden">
         <!-- Hero Header -->
         <WatchlistHero />
