--- a/src/pages/screener.astro
+++ b/src/pages/screener.astro
@@ -34,7 +34,7 @@ const supportedIds = [
 const presetStrategies = allStrategies.filter(s => supportedIds.includes(s.id));
 ---
 
-<MainTerminal title="量子智慧選股終端 (Q-Screener)">
+<MainTerminal title="選股中心">
     <div class="space-y-6 relative pb-20 p-4 lg:p-10">
         <TacticalIntelligenceHUD presetStrategies={presetStrategies} />
 
